--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,19 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd \n"
+    "import pandas as pd \n",
+    "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Open     High      Low    Close  Volume  NextClose\n",
+      "0   11099.8  11205.2  11099.7  11205.1    76.0    11408.1\n",
+      "1   11423.6  11443.7  11388.2  11408.1   106.0    11321.5\n",
+      "2   11382.2  11392.1  11311.4  11321.5    46.0    11491.4\n",
+      "3   11421.3  11501.5  11396.1  11491.4    64.0    11374.6\n",
+      "4   11450.4  11455.4  11359.5  11374.6    65.0    11333.2\n",
+      "5   11363.8  11449.2  11303.1  11333.2    53.0    11360.1\n",
+      "6   11335.3  11370.4  11335.1  11360.1    22.0    11233.2\n",
+      "7   11233.6  11263.5  11183.1  11233.2   107.0    11161.8\n",
+      "8   11307.9  11328.0  11161.8  11161.8    65.0    10999.8\n",
+      "9   11120.8  11130.8  10999.8  10999.8    61.0    11069.1\n",
+      "10  11044.3  11104.4  11019.1  11069.1    75.0    11106.0\n",
+      "11  11015.9  11126.3  11005.7  11106.0    64.0    11039.6\n",
+      "12  11155.5  11180.6  11034.6  11039.6    59.0        NaN\n"
+     ]
+    }
+   ],
    "source": [
     "data = b'Open,High,Low,Close,Volume\\n11099.8,11205.2,11099.7,11205.1,76\\n11423.6,11443.7,11388.2,11408.1,106\\n11382.2,11392.1,11311.4,11321.5,46\\n11421.3,11501.5,11396.1,11491.4,64\\n11450.4,11455.4,11359.5,11374.6,65\\n11363.8,11449.2,11303.1,11333.2,53\\n11335.3,11370.4,11335.1,11360.1,22\\n11233.6,11263.5,11183.1,11233.2,107\\n11307.9,11328.0,11161.8,11161.8,65\\n11120.8,11130.8,10999.8,10999.8,61\\n11044.3,11104.4,11019.1,11069.1,75\\n11015.9,11126.3,11005.7,11106.0,64\\n11155.5,11180.6,11034.6,11039.6,59\\n'\n",
     "data = data.decode('utf-8')\n",
@@ -34,8 +59,16 @@
     "# print(data_formatted)\n",
     "# print(col_names)\n",
     "df = pd.DataFrame(data_formatted, columns = col_names)\n",
+    "df['NextClose'] = df[['Close']].shift(-1)\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
